fix overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body {
     color: #4a4a4a;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 button.default {
     background-color: #fff;
     border: 2px solid #1f51cf;
